# dashscope-realtime

./: README.md  license  makefile  pyproject.toml  setup.cfg
examples/: asr_demo.py  asr_demo_context.py  asr_mic_demo.py  client_demo.py  tts_demo.py  tts_demo_context.py
src/dashscope_realtime/: __init__.py  asr.py  client.py  config.py  event.py  tts.py
