[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dashscope-realtime"
version = "0.1.2"
description = "DashScope Realtime ASR & TTS SDK"
authors = [{ name="geb", email="853934146@qq.com" }]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/mikuh/dashscope-realtime"

[tool.setuptools.packages.find]
where = ["src"]