[metadata]
name = dashscope-realtime
version = 0.1.1
description = DashScope Realtime ASR & TTS SDK
author = mikuh
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mikuh/dashscope-realtime

[options]
packages = find:
package_dir =
    = src
install_requires =
    websockets>=12.0
python_requires = >=3.8
